# cosmic-store

./: .gitignore  .gitmodules  Cargo.toml  GITHUB_ISSUE_WAYLAND_DATA.md  NEXT_STEPS_BITCODE.md  PR_DESCRIPTION.md  README.md  WAYLAND_COMPAT_STATUS.md  WAYLAND_COMPAT_TESTING.md  build.rs  justfile
debian/: changelog  control  copyright  postinst  prerem  rules
examples/: check_wayland_compat.sh  libflatpak.rs
flathub-stats/: Cargo.toml
flathub-stats/src/: main.rs
i18n/af/: cosmic_store.ftl
i18n/ar/: cosmic_store.ftl
i18n/be/: cosmic_store.ftl
i18n/bg/: cosmic_store.ftl
i18n/ca/: cosmic_store.ftl
i18n/cs/: cosmic_store.ftl
i18n/da/: cosmic_store.ftl
i18n/de/: cosmic_store.ftl
i18n/el/: cosmic_store.ftl
i18n/en/: cosmic_store.ftl
i18n/es/: cosmic_store.ftl
i18n/es-419/: cosmic_store.ftl
i18n/et/: cosmic_store.ftl
i18n/fa/: cosmic_store.ftl
i18n/fi/: cosmic_store.ftl
i18n/fr/: cosmic_store.ftl
i18n/fy/: cosmic_store.ftl
i18n/ga/: cosmic_store.ftl
i18n/he/: cosmic_store.ftl
i18n/hi/: cosmic_store.ftl
i18n/hu/: cosmic_store.ftl
i18n/id/: cosmic_store.ftl
i18n/is/: cosmic_store.ftl
i18n/it/: cosmic_store.ftl
i18n/ja/: cosmic_store.ftl
i18n/kab/: cosmic_store.ftl
i18n/kk/: cosmic_store.ftl
i18n/kn/: cosmic_store.ftl
i18n/ko/: cosmic_store.ftl
i18n/lt/: cosmic_store.ftl
i18n/nb-NO/: cosmic_store.ftl
i18n/nl/: cosmic_store.ftl
i18n/nn/: cosmic_store.ftl
i18n/pa/: cosmic_store.ftl
i18n/pl/: cosmic_store.ftl
i18n/pt/: cosmic_store.ftl
i18n/pt-BR/: cosmic_store.ftl
i18n/ro/: cosmic_store.ftl
i18n/ru/: cosmic_store.ftl
i18n/sk/: cosmic_store.ftl
i18n/sr/: cosmic_store.ftl
i18n/sr-Cyrl/: cosmic_store.ftl
i18n/sr-Latn/: cosmic_store.ftl
i18n/sv/: cosmic_store.ftl
i18n/th/: cosmic_store.ftl
i18n/tr/: cosmic_store.ftl
i18n/uk/: cosmic_store.ftl
i18n/yue-Hant/: cosmic_store.ftl
i18n/zh-CN/: cosmic_store.ftl
i18n/zh-TW/: cosmic_store.ftl
i18n/zh-cn/: cosmic_store.ftl
plans/: COMPATIBILITY_SUMMARY.md  IMPLEMENTATION_ANALYSIS.md  ZAPZAP_CASE_STUDY.md  app-compatibility-detection.md  phase1-implementation-plan.md  rating-system-analysis.md
res/: com.system76.CosmicStore.desktop  com.system76.CosmicStore.metainfo.xml  cosmic.flatpakrepo  flathub-stats-2024-02.bitcode-v0-5  flathub-stats-2024-03.bitcode-v0-6  flathub-stats-2024-04.bitcode-v0-6  flathub-stats-2024-06.bitcode-v0-6  flathub-stats.bitcode-v0-6  mock-appstream-wayland.xml
src/: app_id.rs  app_info.rs  appstream_cache.rs  config.rs  editors_choice.rs  explore.rs  gstreamer.rs  icon_cache.rs  key_bind.rs  localize.rs  logind.rs  main.rs  mouse_area.rs  nav.rs  operation.rs  os_info.rs  preview_cache.rs  priority.rs  search.rs  stats.rs  update.rs  view.rs
src/backend/: flatpak.rs  homebrew.rs  mod.rs  packagekit.rs  pkgar.rs  rpm_ostree.rs  system.rs
