[package]
name = "cosmic-store"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"

[dependencies]
chrono = "0.4"
env_logger = "0.10"
freedesktop_entry_parser = "1"
lazy_static = "1"
log = "0.4"
notify-rust = "4"
open = "5"
paste = "1"
rayon = "1"
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["rc", "serde_derive"] }
spdx = { git = "https://github.com/jackpot51/spdx.git" }
tokio = { version = "1", features = ["sync"] }
xdg = "2"
# Internationalization
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6"
rust-embed = "6"
icu_collator = "1.5"
icu_provider = { version = "1.5", features = ["sync"] }
# appstream
appstream = { git = "https://github.com/jackpot51/appstream.git" }
flate2 = "1"
libc = "0.2"
sys-locale = "0.3"
serde_yaml = "0.9"
# fast cache
atomicwrites = { git = "https://github.com/jackpot51/rust-atomicwrites" }
bitcode = { version = "0.6", features = ["serde"] }
dirs = "5"
# flatpak feature
libflatpak = { version = "0.5", optional = true }
# logind feature (for inhibiting suspend/restart/shutdown)
logind-zbus = { version = "4", optional = true }
nix = { version = "0.26", features = ["user"], optional = true }
zbus = { version = "4", optional = true }
# packagekit feature
packagekit-zbus = { version = "0.1", optional = true }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["a11y", "desktop", "multi-window", "single-instance", "tokio", "winit"]

[dependencies.smol_str]
version = "0.2.1"
features = ["serde"]

[features]
default = ["flatpak", "logind", "packagekit", "wgpu"]
flatpak = ["dep:libflatpak"]
logind = ["dep:logind-zbus", "dep:nix", "dep:zbus"]
packagekit = ["dep:packagekit-zbus"]
wgpu = ["libcosmic/wgpu"]

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace]
members = ["flathub-stats"]

# [patch.'https://github.com/pop-os/libcosmic.git']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# [patch.'https://github.com/jackpot51/appstream.git']
# appstream = { path = "../../appstream" }

# [patch.'https://github.com/jackpot51/spdx.git']
# spdx = { path = "../../spdx" }